ET-746 Split transaction to cluster.