@@ -6,13 +6,16 @@ import io.everytrade.server.model.Currency;
 import io.everytrade.server.model.CurrencyPair;
 import io.everytrade.server.model.TransactionType;
 import io.everytrade.server.plugin.api.parser.BuySellImportedTransactionBean;
+import io.everytrade.server.plugin.api.parser.FeeRebateImportedTransactionBean;
 import io.everytrade.server.plugin.api.parser.TransactionCluster;
+import org.knowm.xchange.dto.account.Fee;
 
 import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.time.Instant;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 
@@ -29,6 +32,7 @@ public class OkexApiTransactionBean {
     private final Currency feeCurrency;
     private final BigDecimal fee;
     private static final Map<String, CurrencyPair> FAST_CURRENCY_PAIRS;
+
     static {
         FAST_CURRENCY_PAIRS = new HashMap<>();
         for (CurrencyPair currencyPair : CurrencyPair.getTradeablePairs()) {
@@ -64,31 +68,38 @@ public class OkexApiTransactionBean {
         if (TransactionType.BUY.equals(side)) {
             if (!feeCurrency.equals(instrumentIdBase)) {
                 throw new DataValidationException(
-                    String.format("Fee currency '%s' differ to base currency '%s'.",  feeCurrency, instrumentIdBase)
+                    String.format("Fee currency '%s' differ to base currency '%s'.", feeCurrency, instrumentIdBase)
                 );
             }
             convertedFee = priceAvg.multiply(fee).setScale(DECIMAL_SCALE, RoundingMode.HALF_UP).abs();
         } else {
             if (!feeCurrency.equals(instrumentIdQuote)) {
                 throw new DataValidationException(
-                    String.format("Fee currency '%s' differ to quote currency '%s'.",  feeCurrency, instrumentIdQuote)
+                    String.format("Fee currency '%s' differ to quote currency '%s'.", feeCurrency, instrumentIdQuote)
                 );
             }
             convertedFee = fee.abs();
         }
-        final BuySellImportedTransactionBean buySellImportedTransactionBean = new BuySellImportedTransactionBean(
-            orderId,             //uuid
-            timeStamp,           //executed
-            instrumentIdBase,    //base
-            instrumentIdQuote,   //quote
-            side,                //action
-            filledSize,          //base quantity
-            priceAvg//,           //unit price
-            //convertedFee   //fee quote
-        );
         return new TransactionCluster(
-            buySellImportedTransactionBean,
-            Collections.emptyList()  //TODO: ET-700 - mcharvat - add related transactions (e.g. fees)
+            new BuySellImportedTransactionBean(
+                orderId,
+                timeStamp,
+                instrumentIdBase,
+                instrumentIdQuote,
+                side,
+                filledSize,
+                priceAvg
+            ),
+            List.of(new FeeRebateImportedTransactionBean(
+                    orderId + "-fee",
+                    timeStamp,
+                    instrumentIdBase,
+                    instrumentIdQuote,
+                    TransactionType.FEE,
+                    convertedFee,
+                    feeCurrency
+                )
+            )
         );
     }
 
